# gdk-audio

./: .gitattributes  .gitmodules  .travis.yml  CMakeLists.txt  README.md  notes
demo/: CMakeLists.txt  main.cpp  microphone_work.cpp
demo/typical/: main.cpp
impl/openal/include/gdk/audio/: openal_context.h  openal_emitter.h  openal_scene.h  openal_simple_emitter.h  openal_simple_sound.h  openal_sound.h  openal_stream.h  openal_stream_emitter.h
impl/openal/src/: openal_context.cpp  openal_emitter.cpp  openal_simple_emitter.cpp  openal_simple_sound.cpp  openal_sound.cpp  openal_stream.cpp  openal_stream_emitter.cpp
implementation/openal/include/gdk/audio/: openal_context.h  openal_emitter.h  openal_simple_emitter.h  openal_sound.h  openal_stream.h  openal_stream_emitter.h
implementation/openal/src/: openal_context.cpp  openal_emitter.cpp  openal_simple_sound.cpp  openal_stream.cpp  openal_stream_emitter.cpp
include/gdk/audio/: audio_data.h  context.h  emitter.h  listener.h  scene.h  sound.h
include/jfc/memory/: smart_handle.h
src/: audio_data.cpp  context.cpp  main.cpp  simple_full_decode_example.cpp  stb_vorbis.c  streaming_vorbis_helloworld.cpp
src/include/gdk/audio/: stb_vorbis.h
